--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "通过 web component 打造全新组件库",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/glean-wheat/wheat-ui.git"
+  },
+  "devDependencies": {
+    "terser-webpack-plugin": "^1.4.5",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.0.0"
   },
   "keywords": [],
   "author": "",
