--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "url": "git+https://github.com/glean-wheat/wheat-ui.git"
   },
   "devDependencies": {
+    "css-loader": "^5.0.1",
+    "glob": "^7.1.6",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^1.4.5",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0"
