--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
@@ -16,8 +17,10 @@
     "glob": "^7.1.6",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^1.4.5",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.0.0"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1",
+    "webpack-merge": "^4.2.1"
   },
   "keywords": [],
   "author": "",
