--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack-dev-server --open --config webpack.config.js",
+    "build": "webpack --config ./build/webpack.config.js",
+    "start": "webpack-dev-server --open --config ./build/webpack.config.js",
     "dev": "node ./build/server.js"
   },
   "repository": {
