--- a/package.json
+++ b/package.json
@@ -7,18 +7,28 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./build/webpack.config.js",
     "start": "webpack-dev-server --open --config ./build/webpack.config.js",
-    "dev": "node ./build/server.js"
+    "dev": "node ./build/server.js",
+    "storybook": "start-storybook --no-manager-cache false -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/glean-wheat/wheat-ui.git"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/web-components": "^6.2.9",
+    "babel-loader": "^8.2.2",
+    "boxen": "^5.0.1",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^5.0.1",
     "css-to-string-loader": "^0.1.3",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.5.0",
+    "lit-html": "^1.4.1",
     "node-sass": "^6.0.0",
     "sass-loader": "^10.1.1",
     "sass-to-string": "^1.5.1",
@@ -36,5 +46,6 @@
   "bugs": {
     "url": "https://github.com/glean-wheat/wheat-ui/issues"
   },
-  "homepage": "https://github.com/glean-wheat/wheat-ui#readme"
+  "homepage": "https://github.com/glean-wheat/wheat-ui#readme",
+  "dependencies": {}
 }
