--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./build/webpack.config.js",
     "start": "webpack-dev-server --open --config ./build/webpack.config.js",
-    "dev": "node ./build/server.js",
     "storybook": "start-storybook --no-manager-cache false -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -20,6 +19,7 @@
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.1.18",
     "@storybook/web-components": "^6.2.9",
     "babel-loader": "^8.2.2",
     "boxen": "^5.0.1",
@@ -28,8 +28,12 @@
     "css-to-string-loader": "^0.1.3",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.5.0",
+    "lerna": "^4.0.0",
     "lit-html": "^1.4.1",
     "node-sass": "^6.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "sass": "^1.34.1",
     "sass-loader": "^10.1.1",
     "sass-to-string": "^1.5.1",
     "style-loader": "^2.0.0",
@@ -46,6 +50,5 @@
   "bugs": {
     "url": "https://github.com/glean-wheat/wheat-ui/issues"
   },
-  "homepage": "https://github.com/glean-wheat/wheat-ui#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/glean-wheat/wheat-ui#readme"
 }
