--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-component-wheat-ui",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "通过 web component 打造全新组件库",
   "main": "index.js",
   "scripts": {
@@ -23,8 +23,11 @@
     "@babel/preset-react": "~7.12.5",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-interactions": "^6.5.13",
     "@storybook/addon-links": "^6.3.12",
+    "@storybook/jest": "^0.0.10",
     "@storybook/react": "^6.3.12",
+    "@storybook/testing-library": "^0.0.13",
     "@storybook/web-components": "^6.3.12",
     "babel-loader": "^8.2.2",
     "boxen": "^5.0.1",
