--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.7",
   "description": "通过 web component 打造全新组件库",
   "main": "index.js",
-  "homepage": "./", 
+  "homepage": "./",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./build/webpack.config.js",
@@ -11,7 +11,7 @@
     "start": "webpack-dev-server --open --config ./build/webpack.config.js",
     "storybook": "start-storybook --no-manager-cache false -p 6006",
     "build-storybook": "build-storybook",
-    "predeploy": "build-storybook", 
+    "predeploy": "build-storybook",
     "deploy": "gh-pages -d storybook-static"
   },
   "repository": {
@@ -37,6 +37,7 @@
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^5.0.1",
     "css-to-string-loader": "^0.1.3",
+    "gh-pages": "^4.0.0",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.5.0",
     "lerna": "^4.0.0",
