--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-component-wheat-ui",
-  "version": "1.1.12",
+  "version": "1.1.17",
   "description": "通过 web component 打造全新组件库",
   "main": "index.js",
   "homepage": "https://glean-wheat.github.io/wheat-ui/storybook-static",
@@ -34,6 +34,7 @@
     "@storybook/web-components": "^6.3.12",
     "babel-loader": "^8.2.2",
     "boxen": "^5.0.1",
+    "classnames": "^2.3.2",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^5.0.1",
     "css-to-string-loader": "^0.1.3",
@@ -43,8 +44,10 @@
     "lerna": "^4.0.0",
     "lit-html": "^1.4.1",
     "node-sass": "^6.0.0",
+    "rc-resize-observer": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-window": "^1.8.8",
     "sass": "^1.34.1",
     "sass-loader": "^10.1.1",
     "sass-to-string": "^1.5.1",
@@ -64,7 +67,7 @@
   },
   "dependencies": {
     "@befe/brick": "^0.2.50",
-    "antd": "^4.24.3",
+    "antd": "^4.24.8",
     "lit": "^2.0.2"
   }
 }
